# nes-emulator

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
src/: bus.rs  controller.rs  emulator.rs  joypad.rs  lib.rs  main.rs  nestest.rs  rom.rs
src/apu/: audio_output.rs  dmc_channel.rs  envelope.rs  frame_counter.rs  mod.rs  noise_channel.rs  pulse_channel.rs  triangle_channel.rs
src/audio/: downsampler.rs  mod.rs
src/cartridge/: mod.rs
src/cartridge/mapper/: mapper_000.rs  mapper_002.rs  mod.rs
src/cpu/: addressing.rs  instructions.rs  mem.rs  mod.rs  opcode.rs  trace.rs
src/debug/: mod.rs
src/ppu/: mod.rs
src/ppu/registers/: addr.rs  ctrl.rs  mask.rs  scroll.rs  status.rs
src/ppu/render/: frame.rs  mod.rs  palette.rs
tests/: apu.rs
