[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2024"
default-run = "nes-emulator"

[[bin]]
name = "nestest"
path = "src/nestest.rs"

[dependencies]
bitflags = "2.9.4"
lazy_static = "1.5.0"
rand = "0.9.2"
sdl2 = { version = "0.37.0", features = ["bundled"] }
imgui = "0.12.0"
imgui-sdl2-support = "0.13.0"
imgui-glow-renderer = "0.13.0"
glow = "0.14.2"
clap = { version = "4.5.47", features = ["derive"] }
