[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2024"
default-run = "nes-emulator"

[[bin]]
name = "nestest"
path = "src/nestest.rs"

[dependencies]
bitflags = "2.9.4"
lazy_static = "1.5.0"
rand = "0.9.2"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
glow = "0.14.2"
clap = { version = "4.5.47", features = ["derive"] }
winit = "0.30.12"
imgui-winit-support = "0.13.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
anyhow = "1.0.100"
cpal = "0.16.0"
ringbuf = "0.4.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
